blink-starter/build/generated-src/antlr/main/org/bju/BlinkParser.java
// Generated from org\bju\Blink.g4 by ANTLR 4.7.2

	package org.bju;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BlinkParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, INTEGER_LITERAL=2, STRING_LITERAL=3, BAD_ESCAPE=4, UNTERMINATED=5, 
		TYPE=6, INHERITS=7, FROM=8, END=9, LET=10, MEMBER=11, INT_TYPE=12, STRING_TYPE=13, 
		BOOL_TYPE=14, IF=15, THEN=16, ELSE=17, LOOP=18, WHILE=19, DO=20, TRUE=21, 
		FALSE=22, NIL=23, ME=24, NEW=25, IDENTIFIER=26, ASSIGNMENT=27, COMMA=28, 
		COLON=29, L_PAREN=30, R_PAREN=31, L_SQUARE=32, R_SQUARE=33, L_CURLY=34, 
		R_CURLY=35, OR=36, AND=37, GREATER_EQUAL=38, GREATER=39, LESS_EQUAL=40, 
		LESS=41, EQUAL=42, CONCAT=43, PLUS=44, SUBTRACT=45, MULTIPLY=46, DIVIDE=47, 
		NEGATE=48, NOT=49, DOT=50, OTHER_CHARACTER=51, WHITESPACE=52, NEWLINE=53;
	public static final int
		RULE_start = 0, RULE_primary = 1, RULE_blink_class = 2, RULE_inherits = 3, 
		RULE_declaration = 4, RULE_member_declaration = 5, RULE_variable = 6, 
		RULE_method = 7, RULE_arguments = 8, RULE_argument = 9, RULE_declared_type = 10, 
		RULE_type = 11, RULE_types = 12, RULE_statement = 13, RULE_blink_if = 14, 
		RULE_blink_else = 15, RULE_loop = 16, RULE_expressions = 17, RULE_array_init = 18, 
		RULE_expression = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "primary", "blink_class", "inherits", "declaration", "member_declaration", 
			"variable", "method", "arguments", "argument", "declared_type", "type", 
			"types", "statement", "blink_if", "blink_else", "loop", "expressions", 
			"array_init", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, "'type'", "'inherits'", "'from'", 
			"'end'", "'let'", "'member'", "'int'", "'string'", "'bool'", "'if'", 
			"'then'", "'else'", "'loop'", "'while'", "'do'", "'true'", "'false'", 
			"'nil'", "'me'", "'new'", null, "':='", "','", "':'", "'('", "')'", "'['", 
			"']'", "'{'", "'}'", "'||'", "'&&'", "'>='", "'>'", "'<='", "'<'", "'='", 
			"'&'", "'+'", "'-'", "'*'", "'/'", "'~'", "'!'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENT", "INTEGER_LITERAL", "STRING_LITERAL", "BAD_ESCAPE", "UNTERMINATED", 
			"TYPE", "INHERITS", "FROM", "END", "LET", "MEMBER", "INT_TYPE", "STRING_TYPE", 
			"BOOL_TYPE", "IF", "THEN", "ELSE", "LOOP", "WHILE", "DO", "TRUE", "FALSE", 
			"NIL", "ME", "NEW", "IDENTIFIER", "ASSIGNMENT", "COMMA", "COLON", "L_PAREN", 
			"R_PAREN", "L_SQUARE", "R_SQUARE", "L_CURLY", "R_CURLY", "OR", "AND", 
			"GREATER_EQUAL", "GREATER", "LESS_EQUAL", "LESS", "EQUAL", "CONCAT", 
			"PLUS", "SUBTRACT", "MULTIPLY", "DIVIDE", "NEGATE", "NOT", "DOT", "OTHER_CHARACTER", 
			"WHITESPACE", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Blink.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BlinkParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public PrimaryContext primary;
		public List<PrimaryContext> children = new ArrayList<PrimaryContext>();
		public TerminalNode EOF() { return getToken(BlinkParser.EOF, 0); }
		public List<PrimaryContext> primary() {
			return getRuleContexts(PrimaryContext.class);
		}
		public PrimaryContext primary(int i) {
			return getRuleContext(PrimaryContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlinkVisitor ) return ((BlinkVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(40);
				((StartContext)_localctx).primary = primary();
				((StartContext)_localctx).children.add(((StartContext)_localctx).primary);
				}
				}
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TYPE || _la==LET );
			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimaryContext extends ParserRuleContext {
		public Blink_classContext cls;
		public DeclarationContext decl;
		public Blink_classContext blink_class() {
			return getRuleContext(Blink_classContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public PrimaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primary; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).enterPrimary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).exitPrimary(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlinkVisitor ) return ((BlinkVisitor<? extends T>)visitor).visitPrimary(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimaryContext primary() throws RecognitionException {
		PrimaryContext _localctx = new PrimaryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_primary);
		try {
			setState(49);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				((PrimaryContext)_localctx).cls = blink_class();
				}
				break;
			case LET:
				enterOuterAlt(_localctx, 2);
				{
				setState(48);
				((PrimaryContext)_localctx).decl = declaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Blink_classContext extends ParserRuleContext {
		public Token id;
		public ArgumentsContext args;
		public InheritsContext parent;
		public Member_declarationContext member_declaration;
		public List<Member_declarationContext> members = new ArrayList<Member_declarationContext>();
		public TerminalNode TYPE() { return getToken(BlinkParser.TYPE, 0); }
		public TerminalNode L_PAREN() { return getToken(BlinkParser.L_PAREN, 0); }
		public TerminalNode R_PAREN() { return getToken(BlinkParser.R_PAREN, 0); }
		public TerminalNode ASSIGNMENT() { return getToken(BlinkParser.ASSIGNMENT, 0); }
		public TerminalNode END() { return getToken(BlinkParser.END, 0); }
		public TerminalNode IDENTIFIER() { return getToken(BlinkParser.IDENTIFIER, 0); }
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public InheritsContext inherits() {
			return getRuleContext(InheritsContext.class,0);
		}
		public List<Member_declarationContext> member_declaration() {
			return getRuleContexts(Member_declarationContext.class);
		}
		public Member_declarationContext member_declaration(int i) {
			return getRuleContext(Member_declarationContext.class,i);
		}
		public Blink_classContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blink_class; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).enterBlink_class(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).exitBlink_class(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlinkVisitor ) return ((BlinkVisitor<? extends T>)visitor).visitBlink_class(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Blink_classContext blink_class() throws RecognitionException {
		Blink_classContext _localctx = new Blink_classContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_blink_class);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(TYPE);
			setState(52);
			((Blink_classContext)_localctx).id = match(IDENTIFIER);
			setState(53);
			match(L_PAREN);
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(54);
				((Blink_classContext)_localctx).args = arguments();
				}
			}

			setState(57);
			match(R_PAREN);
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INHERITS) {
				{
				setState(58);
				((Blink_classContext)_localctx).parent = inherits();
				}
			}

			setState(61);
			match(ASSIGNMENT);
			setState(63); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(62);
				((Blink_classContext)_localctx).member_declaration = member_declaration();
				((Blink_classContext)_localctx).members.add(((Blink_classContext)_localctx).member_declaration);
				}
				}
				setState(65); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==MEMBER );
			setState(67);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InheritsContext extends ParserRuleContext {
		public Token id;
		public ExpressionsContext args;
		public TerminalNode INHERITS() { return getToken(BlinkParser.INHERITS, 0); }
		public TerminalNode FROM() { return getToken(BlinkParser.FROM, 0); }
		public TerminalNode L_PAREN() { return getToken(BlinkParser.L_PAREN, 0); }
		public TerminalNode R_PAREN() { return getToken(BlinkParser.R_PAREN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(BlinkParser.IDENTIFIER, 0); }
		public ExpressionsContext expressions() {
			return getRuleContext(ExpressionsContext.class,0);
		}
		public InheritsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inherits; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).enterInherits(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).exitInherits(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlinkVisitor ) return ((BlinkVisitor<? extends T>)visitor).visitInherits(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InheritsContext inherits() throws RecognitionException {
		InheritsContext _localctx = new InheritsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_inherits);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(INHERITS);
			setState(70);
			match(FROM);
			setState(71);
			((InheritsContext)_localctx).id = match(IDENTIFIER);
			setState(72);
			match(L_PAREN);
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER_LITERAL) | (1L << STRING_LITERAL) | (1L << TRUE) | (1L << FALSE) | (1L << NIL) | (1L << ME) | (1L << NEW) | (1L << IDENTIFIER) | (1L << L_PAREN) | (1L << NEGATE) | (1L << NOT))) != 0)) {
				{
				setState(73);
				((InheritsContext)_localctx).args = expressions();
				}
			}

			setState(76);
			match(R_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Method_declContext extends DeclarationContext {
		public TerminalNode LET() { return getToken(BlinkParser.LET, 0); }
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public Method_declContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).enterMethod_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).exitMethod_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlinkVisitor ) return ((BlinkVisitor<? extends T>)visitor).visitMethod_decl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Var_declContext extends DeclarationContext {
		public TerminalNode LET() { return getToken(BlinkParser.LET, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public Var_declContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).enterVar_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).exitVar_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlinkVisitor ) return ((BlinkVisitor<? extends T>)visitor).visitVar_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaration);
		try {
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new Var_declContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				match(LET);
				setState(79);
				variable();
				}
				break;
			case 2:
				_localctx = new Method_declContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				match(LET);
				setState(81);
				method();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Member_declarationContext extends ParserRuleContext {
		public Member_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_member_declaration; }
	 
		public Member_declarationContext() { }
		public void copyFrom(Member_declarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Member_var_declContext extends Member_declarationContext {
		public TerminalNode MEMBER() { return getToken(BlinkParser.MEMBER, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public Member_var_declContext(Member_declarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).enterMember_var_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).exitMember_var_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlinkVisitor ) return ((BlinkVisitor<? extends T>)visitor).visitMember_var_decl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Member_method_declContext extends Member_declarationContext {
		public TerminalNode MEMBER() { return getToken(BlinkParser.MEMBER, 0); }
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public Member_method_declContext(Member_declarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).enterMember_method_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).exitMember_method_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlinkVisitor ) return ((BlinkVisitor<? extends T>)visitor).visitMember_method_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Member_declarationContext member_declaration() throws RecognitionException {
		Member_declarationContext _localctx = new Member_declarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_member_declaration);
		try {
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new Member_var_declContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				match(MEMBER);
				setState(85);
				variable();
				}
				break;
			case 2:
				_localctx = new Member_method_declContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				match(MEMBER);
				setState(87);
				method();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public Token id;
		public Declared_typeContext typ;
		public StatementContext value;
		public TerminalNode ASSIGNMENT() { return getToken(BlinkParser.ASSIGNMENT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(BlinkParser.IDENTIFIER, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public Declared_typeContext declared_type() {
			return getRuleContext(Declared_typeContext.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).exitVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlinkVisitor ) return ((BlinkVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			((VariableContext)_localctx).id = match(IDENTIFIER);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(91);
				((VariableContext)_localctx).typ = declared_type();
				}
			}

			setState(94);
			match(ASSIGNMENT);
			setState(95);
			((VariableContext)_localctx).value = statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodContext extends ParserRuleContext {
		public Token id;
		public ArgumentsContext args;
		public Declared_typeContext typ;
		public DeclarationContext declaration;
		public List<DeclarationContext> members = new ArrayList<DeclarationContext>();
		public StatementContext value;
		public TerminalNode L_PAREN() { return getToken(BlinkParser.L_PAREN, 0); }
		public TerminalNode R_PAREN() { return getToken(BlinkParser.R_PAREN, 0); }
		public TerminalNode ASSIGNMENT() { return getToken(BlinkParser.ASSIGNMENT, 0); }
		public TerminalNode IDENTIFIER() { return getToken(BlinkParser.IDENTIFIER, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public Declared_typeContext declared_type() {
			return getRuleContext(Declared_typeContext.class,0);
		}
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).enterMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).exitMethod(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlinkVisitor ) return ((BlinkVisitor<? extends T>)visitor).visitMethod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_method);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			((MethodContext)_localctx).id = match(IDENTIFIER);
			setState(98);
			match(L_PAREN);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(99);
				((MethodContext)_localctx).args = arguments();
				}
			}

			setState(102);
			match(R_PAREN);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(103);
				((MethodContext)_localctx).typ = declared_type();
				}
			}

			setState(106);
			match(ASSIGNMENT);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LET) {
				{
				{
				setState(107);
				((MethodContext)_localctx).declaration = declaration();
				((MethodContext)_localctx).members.add(((MethodContext)_localctx).declaration);
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			((MethodContext)_localctx).value = statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentsContext extends ParserRuleContext {
		public ArgumentContext first;
		public ArgumentContext argument;
		public List<ArgumentContext> last = new ArrayList<ArgumentContext>();
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(BlinkParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(BlinkParser.COMMA, i);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).enterArguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlinkListener ) ((BlinkListener)listener).exitArguments(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlinkVisitor ) return ((BlinkVisitor<? extends T>)visitor).visitArguments(this);
			else return visitor.visitChildren(this);
		}
	}

